--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -831,6 +831,8 @@ wizard.sendinvitations.sendbymail=Send by mail
 wizard.sendinvitations.offline=Not connected
 wizard.sendinvitations.overpf=Via PowerFolder now
 wizard.sendinvitations.title=Save invitation
+wizard.sendinvitations.sendsuccess=Invitation sent
+wizard.sendinvitations.sendsuccessinfo=You successfully sent the invitation.
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Enter your (dynamic) dns
 wizard.setupdns.improvesread=It improves your reachability. However this is not required
