--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,6 +17,11 @@
 # http://www.powerfolder.com
 #
 
+pro.security.securitysettings=Security Settings
+pro.security.maximum=Maximum
+pro.security.high=High
+pro.security.low=Low
+
 about.dialog.send_bug_report=Send Bug Report
 abortcopy.description=Abort the copy process
 abortcopy.key=A
