--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -22,6 +22,15 @@ pro.security.maximum=Maximum
 pro.security.high=High
 pro.security.low=Low
 
+pro.security.maximum_info=Maximum security:
+pro.security.high_info=High security (default):
+pro.security.low_info=Low security:
+
+pro.security.inet_encryption_preferred=Internet: Encrypted connections are not required.
+pro.security.inet_encryption_required=Internet: Only encrypted connections are accepted.
+pro.security.lan_encryption_preferred=LAN:      Encrypted connections are not required.
+pro.security.lan_encryption_required=LAN:      Only encrypted connections are accepted.
+
 about.dialog.send_bug_report=Send Bug Report
 abortcopy.description=Abort the copy process
 abortcopy.key=A
