--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,6 +17,7 @@
 # http://www.powerfolder.com
 #
 
+preferences.dialog.iplanlist=LAN IP List
 pro.security.securitysettings=Security Settings
 pro.security.maximum=Maximum
 pro.security.high=High
@@ -869,4 +870,4 @@ wizard.whattodo.syncpcs=Synchronize PCs
 wizard.whattodo.title=What do you want to do ?
 
 addressEditor.title=IP-Range
-addressEditor.parseerror=<html><body><i>Invalid address range format, valid inputs are:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</i></body></html>
+addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, valid inputs are:<br\>xxx.xxx.xxx.xxx or<br\>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
