--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -576,12 +576,11 @@ preferences.dialog.language=Language
 preferences.dialog.lanlinesettings=LAN Connection speed
 preferences.dialog.linesettings=Internet Connection speed
 preferences.dialog.network.title=Network
+preferences.dialog.networkmode.name=Connect to
 preferences.dialog.networkmode.lanonly=LAN only
 preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
-preferences.dialog.networkmode.private=Private Networking   
-preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so finding of your friends in the network is possible.</BODY></HTML>
-preferences.dialog.networkmode.public=Public Networking
-preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Enables public Folder sharing.<BR>Private folders will always require an Invitation, regardless of the networking mode.</BODY></HTML>
+preferences.dialog.networkmode.private=LAN and Internet
+preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the internet.</BODY></HTML>
 preferences.dialog.nickname=Nickname
 preferences.dialog.nonwindowsinfo=Attention\: Some settings are only available on Windows systems
 preferences.dialog.plugin.classname=Java classname
@@ -797,9 +796,8 @@ unignorefile.name=Remove from Ignore
 
 wizard.basicsetup.enternick=Please enter your nickname
 wizard.basicsetup.lanonly=LAN only
-wizard.basicsetup.networking=Networking Mode
-wizard.basicsetup.private=Private/Closed Group
-wizard.basicsetup.public=Public Networking
+wizard.basicsetup.networking=Connect to
+wizard.basicsetup.private=LAN and Internet
 wizard.basicsetup.title=Basic Setup
 wizard.choosedisklocation.select=Select directory
 wizard.choosedisklocation.title=Disk location
