Added "Disconnected" text to friendlist

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -356,6 +356,7 @@ general.downloads=Downloads
 general.estimatedsize=Estimated size
 general.file=File
 general.files=Files
+general.disconnected=Disconnected
 general.folder=Folder
 general.folder.public=Public (visible for all)
 general.folder.secret=Private (requires invitation)
@@ -364,11 +365,11 @@ general.friendlist=Friendlist
 general.from=from
 general.help=help
 general.hide=hide
-general.inet=i-net
+general.inet=Internet
 general.localcopyat=Local copy at
 general.localcopyplace=Choose a place for local copy
 general.localized_date_format=MMMM dd. yyyy
-general.localnet=local
+general.localnet=LAN
 general.member=Member
 general.notavailable=not available
 general.notfound=not found
