- Added user quickinfo panel - Removed crappy icons

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -13,17 +13,17 @@ preferences.dialog.icon=icons/Settings.gif
 about.icon=icons/PowerFolder.gif
 about.dialog.icon=icons/PowerFolder.gif
 requestfilelist.icon=icons/FileList.gif
-searchfriends.icon=icons/Node.gif
-addfriend.icon=icons/Node.gif
-addmodifierfriend.icon=icons/Node.gif
-removefriend.icon=icons/Node_orange.gif
-removemodifierfriend.icon=icons/Node_orange.gif
+#searchfriends.icon=icons/Node.gif
+#addfriend.icon=icons/Node.gif
+#addmodifierfriend.icon=icons/Node.gif
+#removefriend.icon=icons/Node_orange.gif
+#removemodifierfriend.icon=icons/Node_orange.gif
 setmasternode.icon=icons/Node.gif
 showfileinfo.icon=icons/SendMessage.gif
 aborttransfer.icon=icons/Abort.gif
-openchat.icon=icons/Chat.gif
-sendinvitation.icon=icons/Chat.gif
-reconnect.icon=icons/Connect.gif
+#openchat.icon=icons/Chat.gif
+#sendinvitation.icon=icons/Chat.gif
+#reconnect.icon=icons/Connect.gif
 openfile.icon=icons/Play.gif
 downloadfile.icon=icons/Download.gif
 deletefile.icon=icons/Delete.gif
