--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,6 +17,11 @@
 # http://www.powerfolder.com
 #
 
+quickinfo.user.isconnectedlan=Is on LAN
+quickinfo.user.isconnectedinet=Is on the Internet
+quickinfo.user.isdiconnected=Is disconnected
+quickinfo.user.secureconnected=securely connected
+
 preferences.dialog.iplanlist=LAN IP List
 pro.security.securitysettings=Security Settings
 pro.security.maximum=Maximum
