--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,6 +17,7 @@
 # http://www.powerfolder.com
 #
 
+statusbar.synchronizing=Synchronizing...
 quickinfo.user.isconnectedlan=Is on LAN
 quickinfo.user.isconnectedinet=Is on the Internet
 quickinfo.user.isdiconnected=Is disconnected
