--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -873,3 +873,10 @@ wizard.whattodo.title=What do you want to do ?
 
 addressEditor.title=IP-Range
 addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, valid inputs are:<br\>xxx.xxx.xxx.xxx or<br\>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+
+preferences.dialog.findPort=Find port
+preferences.dialog.findPort.tooltip=<html>Forces PowerFolder to search for a free port,<br>even if one or more ports in the port list are blocked.</html>
+preferences.dialog.randomPort=Random port
+preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port. 
+
+status.port=Port: {0}
