#261 - only the try 1337 first part missing

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -880,3 +880,6 @@ preferences.dialog.randomPort=Random port
 preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port. 
 
 status.port=Port: {0}
+dialog.alreadyrunning.startbutton=Start anyways
+dialog.fatalerror.title=Fatal Error
+dialog.binderror=Unable to bind port!
