- Introduced "Auto-accept first time friends keys" - I18n / Closed

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -24,6 +24,14 @@ quickinfo.user.isdiconnected=Is disconnected
 quickinfo.user.secureconnected=securely connected
 
 preferences.dialog.iplanlist=LAN IP List
+
+pro.security.possiblebreach=Possible security breach
+pro.security.keymismatch=The public key of {0} mismatches the internal keystore.\nDo you want to accept his new key now?
+pro.security.newkey=New Key detected
+pro.security.nokeyfound=No public key for {0} found in internal keystore.\nDo you want to accept his new key now?
+pro.security.secure=secure
+pro.security.autoacceptfriendkeys=Automatically accept first time public keys from friends
+
 pro.security.securitysettings=Security Settings
 pro.security.maximum=Maximum
 pro.security.high=High
@@ -876,7 +884,7 @@ addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, val
 
 preferences.dialog.findPort=Find port
 preferences.dialog.findPort.tooltip=<html>Forces PowerFolder to search for a free port,<br>even if one or more ports in the port list are blocked.</html>
-preferences.dialog.randomPort=Random port
+preferences.dialog.randomPort=Automatically find a port
 preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port. 
 
 status.port=Port: {0}
