Finalizations in text

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -604,7 +604,7 @@ preferences.dialog.plugin.name=Name
 preferences.dialog.plugin.status=Status
 preferences.dialog.plugin.status_disabled=Disabled
 preferences.dialog.plugin.status_enabled=Enabled
-preferences.dialog.plugin.title=Plugin
+preferences.dialog.plugin.title=Pro Settings
 preferences.dialog.restarttext=Some changes require to restart PowerFolder.\nDo you want to restart now ?\n 
 preferences.dialog.restarttitle=Restart requested
 preferences.dialog.showadvanced=Show Advanced Preferences
