--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,36 +17,6 @@
 # http://www.powerfolder.com
 #
 
-statusbar.synchronizing=Synchronizing...
-quickinfo.user.isconnectedlan=Is on LAN
-quickinfo.user.isconnectedinet=Is on the Internet
-quickinfo.user.isdiconnected=Is disconnected
-quickinfo.user.secureconnected=securely connected
-
-preferences.dialog.iplanlist=LAN IP List
-
-pro.security.possiblebreach=Possible security breach
-pro.security.keymismatch=The public key of {0} mismatches the internal keystore.\nDo you want to accept his new key now?
-pro.security.newkey=New Key detected
-pro.security.nokeyfound=No public key for {0} found in internal keystore.\nDo you want to accept his new key now?
-pro.security.secure=secure
-pro.security.autoacceptfriendkeys=Automatically accept first time public keys from friends
-
-pro.security.securitysettings=Security Settings
-pro.security.maximum=Maximum
-pro.security.high=High
-pro.security.low=Low
-
-pro.security.maximum_info=Maximum security:
-pro.security.high_info=High security (default):
-pro.security.low_info=Low security:
-
-pro.security.inet_encryption_preferred=Internet: Encrypted connections are not required.
-pro.security.inet_encryption_required=Internet: Only encrypted connections are accepted.
-pro.security.lan_encryption_preferred=LAN:      Encrypted connections are not required.
-pro.security.lan_encryption_required=LAN:      Only encrypted connections are accepted.
-
-about.dialog.send_bug_report=Send Bug Report
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
@@ -67,6 +37,7 @@ about.dialog.documentation=Documentation
 about.dialog.general_information=General Information
 about.dialog.homepage=Homepage
 about.dialog.professional_folder_sharing_tool=Professional folder sharing tool
+about.dialog.send_bug_report=Send Bug Report
 about.dialog.support=Support
 about.dialog.team=Team
 about.dialog.testers=Testers
@@ -92,6 +63,9 @@ addfriend.name=Add to Friends
 addmodifierfriend.description=Adds the modifier of file to friendlist
 addmodifierfriend.key=f
 addmodifierfriend.name=Add file Modifier to Friends
+
+addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, valid inputs are\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+addressEditor.title=IP-Range
 
 chatpanel.cannot_deliver=message can not be delivered because '{0}' is not connected
 chatpanel.chat_with=Chat with
@@ -135,11 +109,14 @@ dialog.addmembertofriendlist.explain=(By adding someone to your friendlist, you 
 dialog.addmembertofriendlist.question={0} joined one or more folders\:\n\n{1}\ndo you want to add him to your friendlist now?
 dialog.addmembertofriendlist.title=Add {0} to friendlist
 dialog.alreadyrunning.exitbutton=Exit
+dialog.alreadyrunning.startbutton=Start anyways
 dialog.alreadyrunning.title=Already running
 dialog.alreadyrunning.warning=PowerFolder already running\n\nHint\: If you restarted PowerFolder, \nkill all javaw/java processes and try again
+dialog.binderror=Unable to bind port\!
 dialog.connect.connecting=Connecting
 dialog.connect.connecting_to=Connecting to {0}...
 dialog.connection_problem=Connection problem
+dialog.fatalerror.title=Fatal Error
 dialog.synchronization.choose=Please choose your sync action on
 dialog.synchronization.receive_changes=Receive changes
 dialog.synchronization.send_and_receive_changes=Publish and receive changes
@@ -221,30 +198,27 @@ filelist.status.no_files_available_add_files_and_invite=No files available... ad
 filelist.status.no_files_available_add_files_in_folder=No files available... Add files in you local folder to share them
 filelist.status.no_files_available_yet_fetching_filelist=No files available yet... fetching filelist
 
+filenameproblem.dialog.add_to_ignore=Add to ignore
 filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
-filenameproblem.dialog.never_ask_this_again=Never ask this again
-filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
-filenameproblem.dialog.solution=Solution
-filenameproblem.dialog.title=Filename problem(s) detected
-filenameproblem.dialog.description=Filename problem(s) detected, select for each file a solution
-filenameproblem.dialog.do_nothing=Do nothing
 filenameproblem.dialog.automatic_rename=Automatic rename
 filenameproblem.dialog.automatic_rename.explained=removes invalid charaters and or adds "-1", or similair fixes to create a valid (unique) filename
-filenameproblem.dialog.add_to_ignore=Add to ignore
-filenameproblem.not_recommended_chars=The filename contains characters that are not recommended
-filenameproblem.ends_with_illegal_char=The filename ends with characters that are not recommended
-filenameproblem.reserved_filename=The filename is a reserved filename on Windows
-filenameproblem.to_long=The filename is to long
+filenameproblem.dialog.description=Filename problem(s) detected, select for each file a solution
+filenameproblem.dialog.do_nothing=Do nothing
+filenameproblem.dialog.never_ask_this_again=Never ask this again
+filenameproblem.dialog.solution=Solution
+filenameproblem.dialog.title=Filename problem(s) detected
 filenameproblem.duplicate=Duplicate filename found (with different case)
-
-filenameproblem.not_recommended_chars_windows.description=The filename contains characters that may cause problems on Windows computers.\nThe characters |\\?*<\":>/  and \"controll\" characters (ASCII code 0 till 31)\nare not allowed on those computers
-filenameproblem.not_recommended_chars_mac_osx.description=The filename contains characters that may cause problems on Mac OSX computers.\nThe characters / and : are not allowed on those computers
-filenameproblem.not_recommended_chars_linux.description=The filename contains characters that may cause problems on Unix/Linux computers.\nThe character / is not allowed on those computers
+filenameproblem.duplicate.description=A filename with the same name is found but it has a different case\:\n{0}\nthis causes problems on windows computers
+filenameproblem.ends_with_illegal_char=The filename ends with characters that are not recommended
 filenameproblem.ends_with_illegal_char.description=The filename ends with characters that may cause problems on Windows computers.\nThe characters . and space ( ) are not allowed as last characters on those computers
-filenameproblem.reserved_filename.description=The filename is a reserved filename on Windows,\nit is recommended not to use this names on windows:\n CON, PRN, AUX, CLOCK$, NUL COM0, COM1, COM2, COM3,\nCOM4, COM5, COM6, COM7, COM8, COM9, LPT0, LPT1,\nLPT2, LPT3, LPT4, LPT5, LPT6, LPT7, LPT8, and LPT9
+filenameproblem.not_recommended_chars=The filename contains characters that are not recommended
+filenameproblem.not_recommended_chars_linux.description=The filename contains characters that may cause problems on Unix/Linux computers.\nThe character / is not allowed on those computers
+filenameproblem.not_recommended_chars_mac_osx.description=The filename contains characters that may cause problems on Mac OSX computers.\nThe characters / and \: are not allowed on those computers
+filenameproblem.not_recommended_chars_windows.description=The filename contains characters that may cause problems on Windows computers.\nThe characters |\\?*<"\:>/  and "controll" characters (ASCII code 0 till 31)\nare not allowed on those computers
+filenameproblem.reserved_filename=The filename is a reserved filename on Windows
+filenameproblem.reserved_filename.description=The filename is a reserved filename on Windows,\nit is recommended not to use this names on windows\:\n CON, PRN, AUX, CLOCK$, NUL COM0, COM1, COM2, COM3,\nCOM4, COM5, COM6, COM7, COM8, COM9, LPT0, LPT1,\nLPT2, LPT3, LPT4, LPT5, LPT6, LPT7, LPT8, and LPT9
+filenameproblem.to_long=The filename is to long
 filenameproblem.to_long.description=The filename is longer than 255 characters,\nthis in know to cause problems on Windows, Mac OSX and Unix/Linux computers
-filenameproblem.duplicate.description=A filename with the same name is found but it has a different case:\n{0}\nthis causes problems on windows computers
-
 
 findfriends.description=Start searching for new friends
 findfriends.key=F
@@ -310,6 +284,9 @@ folderleave.key=L
 folderleave.name=Leave folder
 
 folderpanel.chattab.title=Chat
+folderpanel.filestab.dropfile_duplicate_dialog.skipall=Skip All Duplicates
+folderpanel.filestab.dropfile_duplicate_dialog.text=This folder already contains a file '{0}' would you like to overwrite the existing file?
+folderpanel.filestab.dropfile_duplicate_dialog.title=File exists
 folderpanel.hometab.folder_type=Folder type
 folderpanel.hometab.local_folder_location=Local folder location
 folderpanel.hometab.local_size=Local size
@@ -323,9 +300,6 @@ folderpanel.hometab.synchronisation_percentage=Synchronisation percentage
 folderpanel.hometab.title=Home
 folderpanel.hometab.total_number_of_files=Total number of files (local+deleted+available)
 folderpanel.hometab.total_size=Total size
-folderpanel.filestab.dropfile_duplicate_dialog.skipall=Skip All Duplicates
-folderpanel.filestab.dropfile_duplicate_dialog.text=This folder already contains a file '{0}' would you like to overwrite the existing file?
-folderpanel.filestab.dropfile_duplicate_dialog.title=File exists
 folderpanel.settingstab.add_a_pattern.example=example/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Enter a Pattern to exclude files from synchronization
 folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
@@ -366,11 +340,11 @@ general.cancel=Cancel
 general.cancel.key=C
 general.days={0} days
 general.description=Description
+general.disconnected=Disconnected
 general.downloads=Downloads
 general.estimatedsize=Estimated size
 general.file=File
 general.files=Files
-general.disconnected=Disconnected
 general.folder=Folder
 general.folder.public=Public (visible for all)
 general.folder.secret=Private (requires invitation)
@@ -586,14 +560,17 @@ preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match 
 preferences.dialog.dyndnsmanager.nomatch.title=The entered DynDns does not match to this host. 
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
+preferences.dialog.findPort=Find port
+preferences.dialog.findPort.tooltip=<html>Forces PowerFolder to search for a free port,<br>even if one or more ports in the port list are blocked.</html>
 preferences.dialog.general.title=General
+preferences.dialog.iplanlist=LAN IP List
 preferences.dialog.language=Language
 preferences.dialog.lanlinesettings=LAN Connection speed
 preferences.dialog.linesettings=Internet Connection speed
 preferences.dialog.network.title=Network
-preferences.dialog.networkmode.name=Connect to
 preferences.dialog.networkmode.lanonly=LAN only
 preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
+preferences.dialog.networkmode.name=Connect to
 preferences.dialog.networkmode.private=LAN and Internet
 preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the internet.</BODY></HTML>
 preferences.dialog.nickname=Nickname
@@ -605,6 +582,8 @@ preferences.dialog.plugin.status=Status
 preferences.dialog.plugin.status_disabled=Disabled
 preferences.dialog.plugin.status_enabled=Enabled
 preferences.dialog.plugin.title=Pro Settings
+preferences.dialog.randomPort=Automatically find a port
+preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port. 
 preferences.dialog.restarttext=Some changes require to restart PowerFolder.\nDo you want to restart now ?\n 
 preferences.dialog.restarttitle=Restart requested
 preferences.dialog.showadvanced=Show Advanced Preferences
@@ -630,6 +609,24 @@ preferences.name=Preferences
 previewfiles.description=Preview files in this Folder
 previewfiles.key=P
 previewfiles.name=Preview
+
+pro.security.autoacceptfriendkeys=Automatically accept first time public keys from friends
+pro.security.high=High
+pro.security.high_info=High security (default)\:
+pro.security.inet_encryption_preferred=Internet\: Encrypted connections are not required.
+pro.security.inet_encryption_required=Internet\: Only encrypted connections are accepted.
+pro.security.keymismatch=The public key of {0} mismatches the internal keystore.\nDo you want to accept his new key now?
+pro.security.lan_encryption_preferred=LAN\:      Encrypted connections are not required.
+pro.security.lan_encryption_required=LAN\:      Only encrypted connections are accepted.
+pro.security.low=Low
+pro.security.low_info=Low security\:
+pro.security.maximum=Maximum
+pro.security.maximum_info=Maximum security\:
+pro.security.newkey=New Key detected
+pro.security.nokeyfound=No public key for {0} found in internal keystore.\nDo you want to accept his new key now?
+pro.security.possiblebreach=Possible security breach
+pro.security.secure=secure
+pro.security.securitysettings=Security Settings
 
 publicfolders.filter.show_empty_folders=Show empty folders
 publicfolders.lastModified=Last Modified\t
@@ -662,6 +659,10 @@ quickinfo.root.syncing=Sync in progress...
 quickinfo.root.title=Welcome to PowerFolder\!
 quickinfo.upload.active={0} active upload(s)
 quickinfo.upload.title=Upload Status
+quickinfo.user.isconnectedinet=Is on the Internet
+quickinfo.user.isconnectedlan=Is on LAN
+quickinfo.user.isdiconnected=Is disconnected
+quickinfo.user.secureconnected=securely connected
 
 reconnect.description=Reconnects to this user now
 reconnect.key=r
@@ -756,7 +757,10 @@ startdownloads.key=s
 startdownloads.name=Open
 
 status.download=Down\: %.2f KB/s
+status.port=Port\: {0}
 status.upload=Up\: %.2f KB/s
+
+statusbar.synchronizing=Synchronizing...
 
 synchronisation.notice.title=Activated synchronisation profile {0}
 synchronisation.warning.automatic_deletions=This mode will also synchronize file deletions\!\nContinue ?
@@ -850,14 +854,14 @@ wizard.projectsync.takepartsync=Take part in a synchronisation
 wizard.projectsync.title=Project synchronization
 wizard.sendinvitations.joinsync=Invitation files are required to join a synchronization.
 wizard.sendinvitations.neveruntrusted=Never give out invitation files to untrusted people.
-wizard.sendinvitations.sendinvitation=Send invitation
-wizard.sendinvitations.savetofile=Save as file
-wizard.sendinvitations.sendbymail=Send by mail
 wizard.sendinvitations.offline=Not connected
 wizard.sendinvitations.overpf=Via PowerFolder now
-wizard.sendinvitations.title=Save invitation
+wizard.sendinvitations.savetofile=Save as file
+wizard.sendinvitations.sendbymail=Send by mail
+wizard.sendinvitations.sendinvitation=Send invitation
 wizard.sendinvitations.sendsuccess=Invitation sent
 wizard.sendinvitations.sendsuccessinfo=You successfully sent the invitation.
+wizard.sendinvitations.title=Save invitation
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Enter your (dynamic) dns
 wizard.setupdns.improvesread=It improves your reachability. However this is not required
@@ -878,16 +882,3 @@ wizard.whattodo.openonlinedocumentation=Open Online Documentation
 wizard.whattodo.projectwork=Synchronize Project
 wizard.whattodo.syncpcs=Synchronize PCs
 wizard.whattodo.title=What do you want to do ?
-
-addressEditor.title=IP-Range
-addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, valid inputs are:<br\>xxx.xxx.xxx.xxx or<br\>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
-
-preferences.dialog.findPort=Find port
-preferences.dialog.findPort.tooltip=<html>Forces PowerFolder to search for a free port,<br>even if one or more ports in the port list are blocked.</html>
-preferences.dialog.randomPort=Automatically find a port
-preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port. 
-
-status.port=Port: {0}
-dialog.alreadyrunning.startbutton=Start anyways
-dialog.fatalerror.title=Fatal Error
-dialog.binderror=Unable to bind port!
