--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -3,22 +3,22 @@
 startdownloads.icon=icons/Play.gif
 abortdownload.icon=icons/Abort.gif
 cleardompleteddownloads.icon=icons/Clear.gif
-connect.icon=icons/Connect.gif
-disablesilentmode.icon=icons/ScansDisabled.gif
-enablesilentmode.icon=icons/SyncMode.gif
-scanfolder.icon=icons/FileList.gif
+#connect.icon=icons/Connect.gif
+#disablesilentmode.icon=icons/ScansDisabled.gif
+#enablesilentmode.icon=icons/SyncMode.gif
+#scanfolder.icon=icons/FileList.gif
 foldercreate.icon=icons/FolderCreate.gif
-preferences.icon=icons/Settings.gif
-preferences.dialog.icon=icons/Settings.gif
-about.icon=icons/PowerFolder.gif
-about.dialog.icon=icons/PowerFolder.gif
-requestfilelist.icon=icons/FileList.gif
+#preferences.icon=icons/Settings.gif
+#preferences.dialog.icon=icons/Settings.gif
+#about.icon=icons/PowerFolder.gif
+#about.dialog.icon=icons/PowerFolder.gif
+#requestfilelist.icon=icons/FileList.gif
 #searchfriends.icon=icons/Node.gif
 #addfriend.icon=icons/Node.gif
 #addmodifierfriend.icon=icons/Node.gif
 #removefriend.icon=icons/Node_orange.gif
 #removemodifierfriend.icon=icons/Node_orange.gif
-setmasternode.icon=icons/Node.gif
+#setmasternode.icon=icons/Node.gif
 showfileinfo.icon=icons/SendMessage.gif
 aborttransfer.icon=icons/Abort.gif
 #openchat.icon=icons/Chat.gif
