A bit code for #413

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -881,3 +881,5 @@ wizard.whattodo.openonlinedocumentation=Open Online Documentation
 wizard.whattodo.projectwork=Synchronize Project
 wizard.whattodo.syncpcs=Synchronize PCs
 wizard.whattodo.title=What do you want to do ?
+
+wizard.sendinvitations.additionaltext=Additional Information
