--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -418,7 +418,7 @@ linespeed.isdnspeed64=ISDN (64Kbit up)
 linespeed.lan10=LAN 10mbit/s
 linespeed.lan100=LAN 100mbit/s 
 linespeed.lan1000=LAN 1000mbit/s
-linespeed.unlimited=Unlimited traffic
+linespeed.unlimited=Unlimited
 linespeed.uploadspeed=Upload limit
 
 linktoclipboard.description=Copies a clickable PowerFolder link to the clipboard, use to enable people to join this folder and download this file
