--- a/build.xml
+++ b/build.xml
@@ -174,6 +174,9 @@ For creation of the installer:
 		<copy todir="${InstallerFilesLocation}\files">
 			<fileset file="${etc.dir}\ReleaseNotes.txt" />
 		</copy>
+		<copy file="${main.src.dir}\PowerFolder-LICENSE.txt"
+			tofile="${InstallerFilesLocation}\files\License.txt"
+			overwrite="true" />
 	</target>
 
 	<target name="installer" depends="jar, prepare-installer" description="Generate the installer for the free-version">
