--- a/build.xml
+++ b/build.xml
@@ -137,7 +137,7 @@ For creation of the installer:
 		</copy>
 
 		<!-- Copy the Release Notes to include in the distribution -->
-		<copy todir="${dist.dir}">
+		<copy todir="${dist.dir}" overwrite="true">
 			<fileset file="${etc.dir}/ReleaseNotes.txt" />
 			<fileset file="${main.src.dir}/PowerFolder-LICENSE.txt" />
 		</copy>
@@ -171,7 +171,7 @@ For creation of the installer:
 		<copy todir="${InstallerFilesLocation}\files" overwrite="true">
 			<fileset file="${dist.dir}\PowerFolder.jar" />
 		</copy>
-		<copy todir="${InstallerFilesLocation}\files">
+		<copy todir="${InstallerFilesLocation}\files" overwrite="true">
 			<fileset file="${etc.dir}\ReleaseNotes.txt" />
 		</copy>
 		<copy file="${main.src.dir}\PowerFolder-LICENSE.txt"
