--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -21,6 +21,8 @@ abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
 
+general.apply=Apply
+
 abortdownload.description=Aborts the selected downloads and removed them from the download queue
 abortdownload.key=a
 abortdownload.name=Abort
