--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -889,5 +889,5 @@ wizard.whattodo.syncpcs=Synchronize PCs
 wizard.whattodo.title=What do you want to do ?
 
 wizard.sendinvitations.additionaltext=Additional Information
-preferences.dialog.openport=Open port
+preferences.dialog.openport=Automatically open Firewall
 preferences.dialog.openport.tooltip=Opens the PowerFolder port on the windows firewall
