Both have now correct debug ouput in junit test

--- a/src/test-resources/ControllerLisa.config
+++ b/src/test-resources/ControllerLisa.config
@@ -7,7 +7,7 @@ nick=Lisa
 random-port=true
 disableui=true
 uploadlimit=0
-verbose=false
+verbose=true
 disablebroadcasts=true
 disablercon=true
 networkingmode=LANONLYMODE
