--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,6 +17,8 @@
 # http://www.powerfolder.com
 #
 
+foldercreate.dialog.sendinvitation=Send invitations afterwards
+
 dialog.updatecheck.failed.title=Update failed
 dialog.updatecheck.failed.text=Update failed. Please check your internet connection.\n \nPowerFolder Pro: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
 preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
