added sync profile for backup

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,6 +17,9 @@
 # http://www.powerfolder.com
 #
 
+syncprofile.backupsource.name=Backup (Source)
+syncprofile.backuptarget.name=Backup (Target)
+
 foldercreate.dialog.sendinvitation=Send invitations afterwards
 
 dialog.updatecheck.failed.title=Update failed
