--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,6 +17,7 @@
 # http://www.powerfolder.com
 #
 
+limitedconnection.dont_autodetect=Do not longer detect limited connectivity
 syncprofile.backupsource.name=Backup (Source)
 syncprofile.backuptarget.name=Backup (Target)
 
