--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -896,4 +896,7 @@ wizard.whattodo.title=What do you want to do ?
 
 wizard.sendinvitations.additionaltext=Additional Information
 preferences.dialog.openport=Automatically open Windows Firewall
-preferences.dialog.openport.tooltip=Opens the PowerFolder port on the windows firewall
+preferences.dialog.openport.tooltip=Opens the PowerFolder port on the Windows Firewall
+
+preferences.dialog.startwithwindows=Start PowerFolder with Windows
+winutils.shortcut.description=This shortcut was placed here by PowerFolder
