--- a/.classpath
+++ b/.classpath
@@ -15,6 +15,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/looks-2.0.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/validation-1.3.0.jar" sourcepath="lib/validation-1.3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/uif_lite-2.0.4.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.5.0_11"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
