#441 basic "You have been added" friendlist stuff

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -900,3 +900,5 @@ preferences.dialog.openport.tooltip=Opens the PowerFolder port on the Windows Fi
 
 preferences.dialog.startwithwindows=Start PowerFolder with Windows
 winutils.shortcut.description=This shortcut was placed here by PowerFolder
+
+dialog.addmembertofriendlist.question2={0} has added you to his friendlist,\n\ndo you want to add him to your friendlist now?
