--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,6 +17,10 @@
 # http://www.powerfolder.com
 #
 
+buypro.description=Upgrade to PowerFolder Pro now
+buypro.key=B
+buypro.name=Buy Pro
+
 limitedconnection.dont_autodetect=Do not longer detect limited connectivity
 syncprofile.backupsource.name=Backup (Source)
 syncprofile.backuptarget.name=Backup (Target)
