--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -1,5 +1,6 @@
 # this file contains the images used in buttons
 
+
 startdownloads.icon=icons/Play.gif
 abortdownload.icon=icons/Abort.gif
 cleardompleteddownloads.icon=icons/Clear.gif
@@ -38,6 +39,7 @@ unignorefile.icon=icons/UnForbid.gif
 abortcopy.icon=icons/Forbid.gif
 folderjoin.dialog.icon=icons/FolderAction.gif
 showhidefiledetails.icon=icons/Properties.gif
+buypro.icon=icons/toolbar/BuyPro-48-2.png
 
 # crappy button icons that don't make sense removed (for now)
 folderleave.icon=
