Initial work on #488

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,6 +17,28 @@
 # http://www.powerfolder.com
 #
 
+general.webservice=Online Storage - WebService 
+quickinfo.webservice.title=Online Storage - WebService
+quickinfo.webservice.notsetup=PowerFolder WebService not configured yet
+quickinfo.webservice.connected=Connected to PowerFolder WebService
+quickinfo.webservice.notconnected=Disconnected from PowerFolder WebService
+quickinfo.webservice.foldersmirrored={0} of {1} Folder(s) get mirrored
+
+wizard.webservice.mirrorsetup=Mirror Folder by WebService
+wizard.webservice.mirrorchoosefolder=Choose a folder to be mirrored by the PowerFolder WebService
+
+openwebservice.description=Opens the WebService in the default browser
+openwebservice.key=B
+openwebservice.name=Open in Browser
+
+mirrorfolder.description=Setup the WebService to mirror another folder
+mirrorfolder.key=M
+mirrorfolder.name=Mirror Folder
+
+aboutwebservice.description=Opens the WebService of the webservice in default browser
+aboutwebservice.key=A
+aboutwebservice.name=About WebService
+
 buypro.description=Upgrade to PowerFolder Pro now
 buypro.key=B
 buypro.name=Buy Pro
