Initial work on #488

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -20,7 +20,7 @@
 general.webservice=Online Storage - WebService 
 quickinfo.webservice.title=Online Storage - WebService
 quickinfo.webservice.notsetup=PowerFolder WebService not configured yet
-quickinfo.webservice.connected=Connected to PowerFolder WebService
+quickinfo.webservice.connected=Connected to the PowerFolder WebService
 quickinfo.webservice.notconnected=Disconnected from PowerFolder WebService
 quickinfo.webservice.foldersmirrored={0} of {1} Folder(s) get mirrored
 
