More webservice work

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,7 +17,7 @@
 # http://www.powerfolder.com
 #
 
-general.webservice=Online Storage - WebService 
+general.webservice=Online Storage
 quickinfo.webservice.title=Online Storage - WebService
 quickinfo.webservice.notsetup=PowerFolder WebService not configured yet
 quickinfo.webservice.connected=Connected to the PowerFolder WebService
