--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,6 +17,7 @@
 # http://www.powerfolder.com
 #
 
+wizard.webservice.learnmore=What is the PowerFolder WebService?
 general.webservice=Online Storage
 quickinfo.webservice.title=Online Storage - WebService
 quickinfo.webservice.notsetup=PowerFolder WebService not configured yet
