--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,24 +17,31 @@
 # http://www.powerfolder.com
 #
 
+
 wizard.webservice.learnmore=What is the PowerFolder WebService?
 general.webservice=Online Storage
 quickinfo.webservice.title=Online Storage - WebService
 quickinfo.webservice.notsetup=PowerFolder WebService not configured yet
 quickinfo.webservice.connected=Connected to the PowerFolder WebService
 quickinfo.webservice.notconnected=Disconnected from PowerFolder WebService
-quickinfo.webservice.foldersmirrored={0} of {1} Folder(s) get mirrored
+quickinfo.webservice.foldersmirrored={0} of {1} Folder(s) get backed up
 
-wizard.webservice.mirrorsetup=Mirror Folder by WebService
-wizard.webservice.mirrorchoosefolder=Choose a folder to be mirrored by the PowerFolder WebService
+wizard.webservice.login=Online Storage Login
+wizard.webservice.enteraccount=Please enter your account data to login to the WebService
+wizard.webservice.username=Email
+wizard.webservice.password=Password
+wizard.webservice.register=Register new Account
+
+wizard.webservice.mirrorsetup=Backup Folder by WebService
+wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder WebService
 
 openwebservice.description=Opens the WebService in the default browser
 openwebservice.key=B
 openwebservice.name=Open in Browser
 
-mirrorfolder.description=Setup the WebService to mirror another folder
-mirrorfolder.key=M
-mirrorfolder.name=Mirror Folder
+mirrorfolder.description=Setup the WebService to backup a folder
+mirrorfolder.key=B
+mirrorfolder.name=Backup Folder
 
 aboutwebservice.description=Opens the WebService of the webservice in default browser
 aboutwebservice.key=A
