Added limitation dialog

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,6 +17,13 @@
 # http://www.powerfolder.com
 #
 
+freelimitdialog.title=Heavy use detected
+freelimitdialog.heavyusagedetected=PowerFolder has detected that you are heavily using PowerFolder.
+freelimitdialog.buyrecommendation=It is recommended that you upgrade to the Pro Version.
+freelimitdialog.reason=Reason: More than {0} Folders configured.
+freelimitdialog.whatispro=Why should I upgrade to PowerFolder Pro?
+freelimitdialog.buypro=Buy PowerFolder Pro
+freelimitdialog.ignore=Ignore
 
 wizard.webservice.learnmore=What is the PowerFolder WebService?
 general.webservice=Online Storage
