#399 - Use Recycle Bin

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -6,7 +6,7 @@
 # You just need to translate the english text behind the =
 # Then remove the ## in front of the line.
 #
-# There is also a guide on our offical webpage under
+# There is also a guide on our official webpage under
 # http://www.powerfolder.com/?q=node/i18n
 #
 # When you are completed please send your translation file to
@@ -58,7 +58,7 @@ buypro.description=Upgrade to PowerFolder Pro now
 buypro.key=B
 buypro.name=Buy Pro
 
-limitedconnection.dont_autodetect=Do not longer detect limited connectivity
+limitedconnection.dont_autodetect=No longer detect limited connectivity
 syncprofile.backupsource.name=Backup (Source)
 syncprofile.backuptarget.name=Backup (Target)
 
@@ -127,13 +127,13 @@ chatpanel.member_disconnected_at_time={0} disconnected at {1}
 chatpanel.member_joined_folder_at_time={0} joined folder at {1}
 chatpanel.member_left_folder_at_time={0} left folder at {1}
 
-cleardompleteddownloads.description=Clears the list of the recently complted downloads
+cleardompleteddownloads.description=Clears the list of the recently completed downloads
 cleardompleteddownloads.key=c
 cleardompleteddownloads.name=Cleanup
 
-connect.description=Manually connects to an Powerfolder User
+connect.description=Manually connects to a Powerfolder User
 connect.dialog.text=Please enter the hostname or ip of the user you want to connect.\n\nPowerFolder automatically connects to the network after a short time,\nuse this option if you want to manually connect to a user.\n 
-connect.dialog.title=Manually connect to an powerfolder user
+connect.dialog.title=Manually connect to a powerfolder user
 connect.key=c
 connect.name=Connect
 
@@ -147,8 +147,10 @@ delete_confimation.busy.description=Removing file(s)
 delete_confimation.busy.title=Deleting file(s)
 delete_confimation.text=Are you sure you want to delete the following file(s)\:\n (Note that these files are really deleted from your system, not moved to the "Recycle Bin").
 delete_confimation.text_movetorecyclebin=Are you sure you want to move the following file(s) to the PowerFolder Recycle Bin?
+delete_confimation.text_delete=Are you sure you want to permanently delete the following file(s)?
 delete_confimation.text_movetorecyclebin_DIR=<DIR>
 delete_confimation.text_movetorecyclebin_directory=Are you sure you want to move the following file(s) and\nor directories (including subdirectories and the files) to\nthe PowerFolder Recycle Bin?
+delete_confimation.text_delete_directory=Are you sure you want to permanently delete the following file(s) and\nor directories (including subdirectories and the files)?
 delete_confimation.title=Delete files?
 
 deletefile.description=Delete selected file(s)
@@ -304,7 +306,7 @@ foldercreate.nameempty.title=Foldername required
 foldercreate.progress.text=Creating Folder '{0}'
 foldercreate.success=Folder {0} shared, local copy at '{1}'
 
-folderexception.dialog.text=Unable to join to join folder '{0}'.\nReason\: {1}
+folderexception.dialog.text=Unable to join folder '{0}'.\nReason\: {1}
 folderexception.dialog.title=Problem with folder '{0}'
 
 folderinfo.header=Folder Details
@@ -363,6 +365,7 @@ folderpanel.settingstab.removebutton.description=Remove a pattern
 folderpanel.settingstab.removebutton.key=R
 folderpanel.settingstab.removebutton.name=Remove
 folderpanel.settingstab.title=Settings
+folderpanel.settingstab.userecyclebin=Use recycle bin
 
 folderrepository.warnonclose.neveraskagain=Never ask this again 
 folderrepository.warnonclose.text=These folders are not synchronized yet\:\n\n\n\n{0}\n\n\nContinue Exit?
@@ -933,6 +936,7 @@ preferences.dialog.openport=Automatically open Windows Firewall
 preferences.dialog.openport.tooltip=Opens the PowerFolder port on the Windows Firewall
 
 preferences.dialog.startwithwindows=Start PowerFolder with Windows
+preferences.dialog.userecyclebin=Use recycle bin (default)
 winutils.shortcut.description=This shortcut was placed here by PowerFolder
 
 dialog.addmembertofriendlist.question2={0} has added you to his friendlist,\n\ndo you want to add him to your friendlist now?
