--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -504,6 +504,7 @@ myfolderstable.sync_percetage=Sync%
 myfolderstable.syncprofile=Sync Profile
 myfolderstable.total_size=Total Size
 myfolderstable.type=Type
+myfolderstable.syncactivity=Sync Activity
 
 navigationbuttons.back=Back
 navigationbuttons.back_to=Back to {0}
