#259 - initial version of change.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -306,6 +306,9 @@ foldercreate.nameempty.title=Foldername required
 foldercreate.progress.text=Creating Folder '{0}'
 foldercreate.success=Folder {0} shared, local copy at '{1}'
 
+foldermove.progress.title=Folder Move
+foldermove.progress.text=Moving folder '{0}'
+
 folderexception.dialog.text=Unable to join folder '{0}'.\nReason\: {1}
 folderexception.dialog.title=Problem with folder '{0}'
 
@@ -348,6 +351,9 @@ folderpanel.hometab.synchronisation_percentage=Synchronisation percentage
 folderpanel.hometab.title=Home
 folderpanel.hometab.total_number_of_files=Total number of files (local+deleted+available)
 folderpanel.hometab.total_size=Total size
+folderpanel.hometab.confirm_local_folder_move.title=Move local folder
+folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
+folderpanel.hometab.choose_local_folder.title=Choose local folder
 folderpanel.settingstab.add_a_pattern.example=example/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Enter a Pattern to exclude files from synchronization
 folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
