#501 - add small toolbar icon checkbox and coding.

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -32,14 +32,25 @@ open_local_folder.icon=icons/Directory.gif
 webservice_request_folder_join.icon=icons/PowerFolder.gif
 webservice_request_folder_leave.icon=icons/PowerFolder.gif
 remove_from_recycle_bin.icon=icons/Delete.gif
-join_by_invitation.icon=icons/toolbar/Invitation-48.png
-wizard.icon=icons/toolbar/Wizard-48.png
 ignorefile.icon=icons/Forbid.gif
 unignorefile.icon=icons/UnForbid.gif
 abortcopy.icon=icons/Forbid.gif
 folderjoin.dialog.icon=icons/FolderAction.gif
 showhidefiledetails.icon=icons/Properties.gif
+
+# Toolbar icons
+join_by_invitation.icon=icons/toolbar/Invitation-48.png
+wizard.icon=icons/toolbar/Wizard-48.png
 buypro.icon=icons/toolbar/BuyPro-48.png
+new_folder.icon=icons/toolbar/NewFolder-48.png
+join_folder.icon=icons/toolbar/JoinFolder-48.png
+leave_folder.icon=icons/toolbar/LeaveFolder-48.png
+preferences.icon=icons/toolbar/Preferences-48.png
+about.icon=icons/toolbar/About-48.png
+sleep.icon=icons/toolbar/Sleep-48.png
+wake_up.icon=icons/toolbar/WakeUp-48.png
+sync_now.icon=icons/toolbar/Sync-48.png
+sync_now_active.icon=icons/toolbar/SyncActive-48.png
 
 # crappy button icons that don't make sense removed (for now)
 folderleave.icon=
