--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -256,7 +256,7 @@ filelist.status.no_files_available_yet_fetching_filelist=No files available yet.
 filenameproblem.dialog.add_to_ignore=Add to ignore
 filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
 filenameproblem.dialog.automatic_rename=Automatic rename
-filenameproblem.dialog.automatic_rename.explained=removes invalid charaters and or adds "-1", or similair fixes to create a valid (unique) filename
+filenameproblem.dialog.automatic_rename.explained=removes invalid characters and or adds "-1", or similair fixes to create a valid (unique) filename
 filenameproblem.dialog.description=Filename problem(s) detected, select for each file a solution
 filenameproblem.dialog.do_nothing=Do nothing
 filenameproblem.dialog.never_ask_this_again=Never ask this again
@@ -642,6 +642,7 @@ preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port.
 preferences.dialog.restarttext=Some changes require to restart PowerFolder.\nDo you want to restart now ?\n 
 preferences.dialog.restarttitle=Restart requested
 preferences.dialog.showadvanced=Show Advanced Preferences
+preferences.dialog.smalltoolbar=Use small toolbar icons
 preferences.dialog.showpreviewpanel=Enable internal image preview
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
 preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
@@ -649,7 +650,7 @@ preferences.dialog.silentthrottle.tooltip=Set the bandwidth usage throttle in si
 preferences.dialog.statusCantResolve=DynDns {0}\: cannot be resolved\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} validated successfully\!
 preferences.dialog.statusValidFailed=DynDns {0}\: validation Failed\!
-preferences.dialog.statusWaitDynDns=Please wait, DynDns {0} is beaing validated\!
+preferences.dialog.statusWaitDynDns=Please wait, DynDns {0} is being validated\!
 preferences.dialog.title=Preferences
 preferences.dialog.titleProcessing=processing...
 preferences.dialog.useziponlan=Use ZIP Compression on LAN 
