--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -510,7 +510,7 @@ myfolderstable.sync_percetage=Sync%
 myfolderstable.syncprofile=Sync Profile
 myfolderstable.total_size=Total Size
 myfolderstable.type=Type
-myfolderstable.syncactivity=Sync Activity
+myfolderstable.sync=Sync
 
 navigationbuttons.back=Back
 navigationbuttons.back_to=Back to {0}
