--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -16,7 +16,9 @@
 # Your PowerFolder Team
 # http://www.powerfolder.com
 #
-
+foldercreate.dialog.backuperror.title=Unable to backup folder
+foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the folder
+foldercreate.dialog.backupbyonlinestorage=Backup by Online Storage
 freelimitdialog.title=Heavy use detected
 freelimitdialog.heavyusagedetected=PowerFolder has detected that you are heavily using PowerFolder.
 freelimitdialog.buyrecommendation=It is recommended that you upgrade to the Pro Version.
